--- a/index.html
+++ b/index.html
@@ -91,24 +91,30 @@
             >
               Breadth First
             </option>
-            <option value="depth"
-            tabindex="0"
-            title="Will Find A Path Not Guaranteed to Be The Shortest"
-            class="dropdown-item"
-            data-toggle="popover"
-            data-boundary="window"
-            data-placement="right"
-            data-trigger="hover"
-            >Depth First</option>
-            <option value="Bidirectional"
-            tabindex="0"
-            title="Breadth First Search With Two Starting Points"
-            class="dropdown-item"
-            data-toggle="popover"
-            data-boundary="window"
-            data-placement="right"
-            data-trigger="hover"
-            >Bidirectional</option>
+            <option
+              value="depth"
+              tabindex="0"
+              title="Will Find A Path Not Guaranteed to Be The Shortest"
+              class="dropdown-item"
+              data-toggle="popover"
+              data-boundary="window"
+              data-placement="right"
+              data-trigger="hover"
+            >
+              Depth First
+            </option>
+            <option
+              value="Bidirectional"
+              tabindex="0"
+              title="Breadth First Search With Two Starting Points"
+              class="dropdown-item"
+              data-toggle="popover"
+              data-boundary="window"
+              data-placement="right"
+              data-trigger="hover"
+            >
+              Bidirectional
+            </option>
           </select>
         </div>
 
