--- a/index.html
+++ b/index.html
@@ -128,4 +128,8 @@
   <script type="module" src="logic.js"></script>
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-</html>
+  <script src="jquery.ui.touch-punch.min.js"></script>
+
+  
+  
+  </html>
